traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:6: error: type mismatch;
 found   : Unit
 required: Boolean
    if(col = 0){
           ^